macro(add_leetcode_target target solution_class)
    add_executable(${target} ${TEST_CPP_FILE}) # see test/CMakeLists.txt
    target_link_libraries(${target} PRIVATE leetcode_test)

    target_include_directories(${target} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
    target_compile_definitions(${target} PRIVATE -DSOLUTION_CLASS=${solution_class})
    target_compile_options(${target} PRIVATE -fsanitize=address,undefined)
    target_link_options(${target} PRIVATE -fsanitize=address,undefined)
endmacro()

add_subdirectory(1-two-sum)
add_subdirectory(4-median-of-two-sorted-arrays)
add_subdirectory(10-regular-expression-matching)
add_subdirectory(13-roman-to-integer)
add_subdirectory(72-edit-distance)
add_subdirectory(169-majority-element)
add_subdirectory(15-three-sum)
add_subdirectory(32-longest-valid-parentheses)
add_subdirectory(206-reverse-linked-list)
add_subdirectory(6-longest-substring-without-repeating-chars)
add_subdirectory(lru-cache)
add_subdirectory(215-kth-largest-element)
add_subdirectory(204-count-primes)
add_subdirectory(23-merge-k-sorted-lists)
add_subdirectory(556-next-greater-element-iii)
add_subdirectory(11-container-with-most-water)
add_subdirectory(1200-min-abs-difference)
add_subdirectory(160-intersection-of-two-linked-lists)
add_subdirectory(17-letter-combination-of-phone-number)
add_subdirectory(31-next-permutation)
add_subdirectory(33-search-in-rotated-sorted-array)
add_subdirectory(102-binary-tree-level-order-traversal)
add_subdirectory(200-number-of-islands)
add_subdirectory(207-course-schedule)
