macro(add_leetcode_target target solution_class)
    add_executable(${target} ${TEST_CPP_FILE}) # see test/CMakeLists.txt
    target_link_libraries(${target} PRIVATE leetcode_test)

    target_include_directories(${target} PRIVATE ${CMAKE_CURRENT_LIST_DIR} ${PROJECT_SOURCE_DIR}/src)
    target_compile_definitions(${target} PRIVATE -DSOLUTION_CLASS=${solution_class})
    target_compile_options(${target} PRIVATE -fsanitize=address,undefined)
    target_link_options(${target} PRIVATE -fsanitize=address,undefined)
endmacro()

add_subdirectory(1-two-sum)
add_subdirectory(4-median-of-two-sorted-arrays)
add_subdirectory(10-regular-expression-matching)
add_subdirectory(13-roman-to-integer)
add_subdirectory(72-edit-distance)
add_subdirectory(169-majority-element)
add_subdirectory(15-three-sum)
add_subdirectory(32-longest-valid-parentheses)
add_subdirectory(206-reverse-linked-list)
add_subdirectory(6-longest-substring-without-repeating-chars)
add_subdirectory(lru-cache)
add_subdirectory(215-kth-largest-element)
add_subdirectory(204-count-primes)
add_subdirectory(23-merge-k-sorted-lists)
add_subdirectory(556-next-greater-element-iii)
add_subdirectory(11-container-with-most-water)
add_subdirectory(1200-min-abs-difference)
add_subdirectory(160-intersection-of-two-linked-lists)
add_subdirectory(17-letter-combination-of-phone-number)
add_subdirectory(31-next-permutation)
add_subdirectory(33-search-in-rotated-sorted-array)
add_subdirectory(102-binary-tree-level-order-traversal)
add_subdirectory(200-number-of-islands)
add_subdirectory(207-course-schedule)
add_subdirectory(210-course-schedule-ii)
add_subdirectory(225-implement-stack-using-queues)
add_subdirectory(54-spiral-matrix)
add_subdirectory(53-max-subarray)
add_subdirectory(69-sqrt-x)
add_subdirectory(155-min-stack)
add_subdirectory(24-swap-nodes-pairs)
add_subdirectory(19-remove-nth-node-from-end-of-list)
add_subdirectory(150-evaluate-reverse-polish-notation)
add_subdirectory(49-group-anagrams)
add_subdirectory(88-merge-sorted-array)
add_subdirectory(973-k-closest-point)
add_subdirectory(1438-longest-continuous-subarray-with-abs-diff-lt-eq-limit)
add_subdirectory(103-binary-tree-zigzag-level-order-traversal)
add_subdirectory(543-diameter-of-binary-tree)
add_subdirectory(1423-maximum-points-you-can-obtain-from-cards)
add_subdirectory(547-number-of-provinces)
add_subdirectory(208-implement-trie)
add_subdirectory(230-kth-smallest-elements-in-bst)
add_subdirectory(1382-balance-a-bst)
add_subdirectory(235-lowest-common-ancester-of-bst)
