macro(add_leetcode_target target solution_class)
    add_executable(${target} ${TEST_CPP_FILE}) # see test/CMakeLists.txt
    target_link_libraries(${target} PRIVATE leetcode_test)

    target_include_directories(${target} PRIVATE ${CMAKE_CURRENT_LIST_DIR} ${PROJECT_SOURCE_DIR}/src)
    target_compile_definitions(${target} PRIVATE -DSOLUTION_CLASS=${solution_class})
    target_compile_options(${target} PRIVATE -fsanitize=address,undefined)
    target_link_options(${target} PRIVATE -fsanitize=address,undefined)
endmacro()

add_subdirectory(1-two-sum)
add_subdirectory(4-median-of-two-sorted-arrays)
add_subdirectory(10-regular-expression-matching)
add_subdirectory(13-roman-to-integer)
add_subdirectory(72-edit-distance)
add_subdirectory(169-majority-element)
add_subdirectory(15-three-sum)
add_subdirectory(32-longest-valid-parentheses)
add_subdirectory(206-reverse-linked-list)
add_subdirectory(6-longest-substring-without-repeating-chars)
add_subdirectory(lru-cache)
add_subdirectory(215-kth-largest-element)
add_subdirectory(204-count-primes)
add_subdirectory(23-merge-k-sorted-lists)
add_subdirectory(556-next-greater-element-iii)
add_subdirectory(11-container-with-most-water)
add_subdirectory(1200-min-abs-difference)
add_subdirectory(160-intersection-of-two-linked-lists)
add_subdirectory(17-letter-combination-of-phone-number)
add_subdirectory(31-next-permutation)
add_subdirectory(33-search-in-rotated-sorted-array)
add_subdirectory(102-binary-tree-level-order-traversal)
add_subdirectory(200-number-of-islands)
add_subdirectory(207-course-schedule)
add_subdirectory(210-course-schedule-ii)
add_subdirectory(225-implement-stack-using-queues)
add_subdirectory(54-spiral-matrix)
add_subdirectory(53-max-subarray)
add_subdirectory(69-sqrt-x)
add_subdirectory(155-min-stack)
add_subdirectory(24-swap-nodes-pairs)
add_subdirectory(19-remove-nth-node-from-end-of-list)
add_subdirectory(150-evaluate-reverse-polish-notation)
add_subdirectory(49-group-anagrams)
add_subdirectory(88-merge-sorted-array)
add_subdirectory(973-k-closest-point)
add_subdirectory(1438-longest-continuous-subarray-with-abs-diff-lt-eq-limit)
add_subdirectory(103-binary-tree-zigzag-level-order-traversal)
add_subdirectory(543-diameter-of-binary-tree)
add_subdirectory(1423-maximum-points-you-can-obtain-from-cards)
add_subdirectory(547-number-of-provinces)
add_subdirectory(208-implement-trie)
add_subdirectory(230-kth-smallest-elements-in-bst)
add_subdirectory(1382-balance-a-bst)
add_subdirectory(235-lowest-common-ancester-of-bst)
add_subdirectory(729-my-calendar-i)
add_subdirectory(84-largest-rectangle-in-histogram)
add_subdirectory(44-wildcard-matching)
add_subdirectory(899-orderly-queue)
add_subdirectory(148-sort-list)
add_subdirectory(232-implement-queue-using-stacks)
add_subdirectory(34-find-first-and-last-position-of-element-in-sorted-array)
add_subdirectory(153-find-minimum-in-rotated-sorted-array)
add_subdirectory(154-find-minimum-in-rotated-sorted-array-ii)
add_subdirectory(73-set-matrix-zeros)
add_subdirectory(128-longest-consecutive-sequence)
add_subdirectory(264-ugly-number-ii)
add_subdirectory(429-n-ary-tree-level-order-traversal)
add_subdirectory(133-clone-graph)
add_subdirectory(295-find-median-from-data-stream)
add_subdirectory(981-time-based-key-value-store)
add_subdirectory(1004-max-consecutive-ones-iii)
add_subdirectory(36-valid-sudoku)
add_subdirectory(37-sudoku-solver)
add_subdirectory(281-zigzag-iterator)
add_subdirectory(218-the-skyline-problem)
add_subdirectory(56-merge-intervals)
add_subdirectory(57-insert-interval)
add_subdirectory(42-trapping-rain-water)
add_subdirectory(20-valid-parenthesis)
add_subdirectory(22-generate-parentheses)
add_subdirectory(45-jump-game-ii)
add_subdirectory(55-jump-game)
add_subdirectory(48-rotate-image)
add_subdirectory(16-3sum-closest)
add_subdirectory(674-longest-continuous-increasing-subsequence)
add_subdirectory(85-maxi-rectangle)
add_subdirectory(93-restore-ip-addresses)
add_subdirectory(278-first-bad-version)
add_subdirectory(81-search-in-rotated-sorted-array-ii)
add_subdirectory(75-sort-colors)
add_subdirectory(877-stone-game)
add_subdirectory(41-first-missing-positive)
add_subdirectory(143-reorder-list)
add_subdirectory(876-middle-of-linked-list)
add_subdirectory(845-longest-mountain-in-array)
add_subdirectory(238-product-of-array-except-self)
add_subdirectory(416-partition-equal-subset-sum)
add_subdirectory(346-moving-average-from-data-stream)
add_subdirectory(1209-remove-all-adjacent-duplicates-in-string-ii)
add_subdirectory(2232-minimize-result-by-adding-parentheses-to-expression)
add_subdirectory(62-unique-paths)
add_subdirectory(723-candy-crush)
add_subdirectory(370-range-addition)
add_subdirectory(68-text-justification)
add_subdirectory(283-move-zeros)
add_subdirectory(945-min-increment-to-make-array-unique)
add_subdirectory(863-all-nodes-distance-k-in-binary-tree)
add_subdirectory(51-n-queens)
add_subdirectory(26-remove-duplicates-from-sorted-array)
add_subdirectory(46-permutations)
add_subdirectory(114-flatten-binary-tree-to-linked-list)
add_subdirectory(116-populating-next-right-pointers-in-each-node)
add_subdirectory(654-max-binary-tree)
add_subdirectory(528-random-pick-with-weight)
add_subdirectory(382-linked-list-random-node)
add_subdirectory(398-random-pick-index)
add_subdirectory(759-employee-free-time)
add_subdirectory(1293-shortest-path-in-grid-with-obstacles-elimination)
add_subdirectory(1419-min-number-of-frogs-croaking)
add_subdirectory(503-next-greater-element-ii)
add_subdirectory(226-invert-binary-tree)
add_subdirectory(94-binary-tree-inorder-traversal)
add_subdirectory(111-min-depth-binary-tree)
add_subdirectory(105-construct-binary-tree-from-preorder-inorder)
add_subdirectory(106-construct-binary-tree-from-inorder-postorder)
add_subdirectory(889-construct-binary-tree-from-preorder-postorder)
add_subdirectory(173-binary-tree-iterator)
add_subdirectory(560-subarray-sum-equals-k)
add_subdirectory(2-add-two-numbers)
add_subdirectory(286-walls-and-gates)
add_subdirectory(12-int-to-roman)
add_subdirectory(268-missing-number)
add_subdirectory(494-target-sum)
add_subdirectory(1428-leftmost-column-with-at-least-a-one)
add_subdirectory(562-longest-line-of-consecutive-one-in-matrix)
add_subdirectory(1277-count-square-submatrices-with-all-ones)
add_subdirectory(221-maximal-square)
add_subdirectory(662-max-width-of-binary-tree)
add_subdirectory(253-meeting-rooms-ii)
